--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 
 name = tkfplaygroundpy
 version = attr: tkfplaygroundpy.__version__
-# description = tkfplaygroundpy: THIS DOES WHAT
+description = My Python packaging playground
 long_description = file: README.rst
 # url = https://github.com/tkf/tkfplaygroundpy
 # project_urls =
