DEBUG pip freeze

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ deps =
     pytest-cov
     coverage
 commands =
+    pip freeze
     py.test \
         --pyargs tkfplaygroundpy \
         {posargs}
