--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 sudo: false
 language: python
+dist: xenial
 
 python:
+  - "3.4"
+  - "3.5"
   - "3.6"
+  - "3.7"
 
 before_install:
   - pip install --quiet --upgrade pip setuptools
