--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ python:
   - "3.7"
 
 before_install:
-  - pip install --quiet --upgrade pip setuptools
-  - pip install --quiet --upgrade tox coveralls
+  - pip install --quiet "pip>=19.0" "setuptools>=41.0"
+  - pip install --quiet tox coveralls
   - pip --version
   - tox --version
   - pip freeze --all
