--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
   - "3.6"
 
 before_install:
+  - pip install --quiet "pip>=19.0" "setuptools>=41.0"
   - pip install --quiet tox coveralls
 
 script:
