Do not run deploy job in non-release branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ jobs:
         on:
           branch: release/test
           repo: tkf/tkfplaygroundpy
+      if: branch = release/test
       script: skip
 
     # Test uploaded package
