--- a/tox.ini
+++ b/tox.ini
@@ -23,3 +23,11 @@ source =
     src/tkfplaygroundpy
     .tox/*/lib/python*/site-packages/tkfplaygroundpy
 # https://coverage.readthedocs.io/en/coverage-4.5.1/config.html#paths
+
+[testenv:style]
+deps =
+    black == 19.3b0
+    isort == 4.3.17
+commands =
+    isort --recursive --check-only .
+    black --check --diff .
