--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,6 @@ jobs:
 
     # Test uploaded package
     - stage: "Test upload"
-      if: branch = release/test OR upload/test
+      if: branch = release/test OR branch = upload/test
       script:
         - cd ci/test-upload && tox
