--- a/setup.cfg
+++ b/setup.cfg
@@ -26,8 +26,8 @@ package_dir =
     =src
 packages = find:
 # zip_safe = False
-# install_requires =
-#     numpy
+install_requires =
+    packaging
 
 [options.packages.find]
 where = src
