Set project URLs in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,9 @@ name = tkfplaygroundpy
 version = attr: tkfplaygroundpy.__version__
 description = My Python packaging playground
 long_description = file: README.rst
-# url = https://github.com/tkf/tkfplaygroundpy
-# project_urls =
-#     Tracker=https://github.com/tkf/tkfplaygroundpy/issues
+url = https://github.com/tkf/tkfplaygroundpy
+project_urls =
+    Tracker=https://github.com/tkf/tkfplaygroundpy/issues
 
 author = Takafumi Arakaki
 author_email = aka.tkf@gmail.com
