Fix bdist_wheel.universal setup
Inline comment is not allowed.

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,8 @@ where = src
 #    PROGRAM_NAME=tkfplaygroundpy.cli:main
 
 [bdist_wheel]
-universal = 1  # built wheel is Python 2/3 compatible
+# Built wheel is Python 2/3 compatible:
+universal = 1
 
 [tool:isort]
 known_first_party = tkfplaygroundpy
