--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,12 @@
 [tox]
 envlist = py
 
+# for `requires`:
+minversion = 3.2.0
+
+requires =
+    setuptools >= 41.0
+
 [testenv]
 deps =
     pytest
