Test with pre-release in ci/test-upload

--- a/ci/test-upload/tox.ini
+++ b/ci/test-upload/tox.ini
@@ -8,6 +8,7 @@ skipsdist = True
 deps =
     pytest
     :test:tkfplaygroundpy
+pip_pre = true
 commands =
     py.test \
         --pyargs tkfplaygroundpy \
