Specify version explicitly in ci/test-upload/tox.ini

--- a/ci/test-upload/tox.ini
+++ b/ci/test-upload/tox.ini
@@ -7,8 +7,7 @@ skipsdist = True
 [testenv]
 deps =
     pytest
-    :test:tkfplaygroundpy
-pip_pre = true
+    :test:tkfplaygroundpy == 0.0.1
 commands =
     py.test \
         --pyargs tkfplaygroundpy \
