--- a/ci/test-upload/tox.ini
+++ b/ci/test-upload/tox.ini
@@ -7,7 +7,7 @@ skipsdist = True
 [testenv]
 deps =
     pytest
-    :test:tkfplaygroundpy == 0.0.1
+    :test:tkfplaygroundpy == 0.0.2.dev
 commands =
     py.test \
         --pyargs tkfplaygroundpy \
