Revert "Specify version explicitly in ci/test-upload/tox.ini"
This reverts commit bc4ea0a82f4ffe3ff057859b83dd4a11e782a2ae.

It didn't work:
https://travis-ci.com/tkf/tkfplaygroundpy/jobs/194772235#L186

--- a/ci/test-upload/tox.ini
+++ b/ci/test-upload/tox.ini
@@ -7,7 +7,8 @@ skipsdist = True
 [testenv]
 deps =
     pytest
-    :test:tkfplaygroundpy == 0.0.2.dev
+    :test:tkfplaygroundpy
+pip_pre = true
 commands =
     py.test \
         --pyargs tkfplaygroundpy \
