--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,11 @@ jobs:
           repo: tkf/tkfplaygroundpy
       if: branch = release/test
       script: skip
-      after_success: skip
+      after_success:
+        - echo "skipped"
+        # Do not use `after_success: skip` as it would skip the deploy
+        # step.
+        # https://github.com/travis-ci/travis-ci/issues/8337#issuecomment-326838809
 
     # Test uploaded package
     - stage: "Test upload"
