Use explicity commands_pre in tox.ini

--- a/ci/test-upload/tox.ini
+++ b/ci/test-upload/tox.ini
@@ -1,14 +1,12 @@
 [tox]
 envlist = py
-indexserver =
-    test = https://test.pypi.org/simple/
 skipsdist = True
 
 [testenv]
 deps =
     pytest
-    :test:tkfplaygroundpy
-pip_pre = true
+commands_pre =
+    pip install --index-url https://test.pypi.org/simple/ tkfplaygroundpy==0.0.2.dev2
 commands =
     py.test \
         --pyargs tkfplaygroundpy \
