--- a/ci/test-upload/tox.ini
+++ b/ci/test-upload/tox.ini
@@ -6,7 +6,7 @@ skipsdist = True
 deps =
     pytest
 commands_pre =
-    pip install --index-url https://test.pypi.org/simple/ --retries 50 tkfplaygroundpy==0.0.2.dev4
+    pip install --index-url https://test.pypi.org/simple/ tkfplaygroundpy==0.0.2.dev4
 commands =
     py.test \
         --pyargs tkfplaygroundpy \
