--- a/ci/test-upload/tox.ini
+++ b/ci/test-upload/tox.ini
@@ -5,7 +5,9 @@ skipsdist = True
 [testenv]
 deps =
     pytest
+    shell-retry == 0.0.8
 commands_pre =
+    shell-retry --backoff=2 --interval-max=20 --retry-count=30 --verbose -- \
     pip install --index-url https://test.pypi.org/simple/ tkfplaygroundpy==0.0.2.dev4
 commands =
     py.test \
