--- a/ci/test-upload/tox.ini
+++ b/ci/test-upload/tox.ini
@@ -8,7 +8,7 @@ deps =
     shell-retry == 0.0.8
 commands_pre =
     shell-retry --backoff=2 --interval-max=20 --retry-count=30 --verbose -- \
-    pip install --index-url https://test.pypi.org/simple/ tkfplaygroundpy==0.0.2.dev5
+    pip install --index-url https://test.pypi.org/simple/ tkfplaygroundpy==0.0.2
 commands =
     py.test \
         --pyargs tkfplaygroundpy \
