Run `coverage report` in `commands_post`

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,11 @@ deps =
 commands =
     py.test \
         --pyargs tkfplaygroundpy \
-        {posargs}
+        --cov=tkfplaygroundpy \
+        {posargs:--cov-report=}
+commands_post =
+    coverage combine .coverage
+    coverage report
 
 [pytest]
 addopts =
