--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,9 @@ before_install:
   - pip install --quiet tox coveralls
 
 script:
-  - tox -- --cov=tkfplaygroundpy
+  - tox
 
 after_success:
-  # Strip off ".tox/..." from the coverage
-  # (see also [[./tox.ini::coverage:paths]]):
-  - .tox/py*/bin/coverage combine .coverage
   - coveralls
 
 notifications:
