Cleaner coverage output

--- a/tox.ini
+++ b/tox.ini
@@ -17,9 +17,13 @@ commands =
         --pyargs tkfplaygroundpy \
         --cov=tkfplaygroundpy \
         {posargs:--cov-report=}
+commands_pre =
+    -rm .coverage
 commands_post =
-    coverage combine .coverage
-    coverage report
+    -coverage combine .coverage
+    -coverage report
+whitelist_externals =
+    rm
 
 [pytest]
 addopts =
