Pull out `--cov-report=` from `posargs`
Coverage report can be disabled by `--no-cov`.  It would be surprising
if passing some pytest re-enables coverage report output.

--- a/tox.ini
+++ b/tox.ini
@@ -14,9 +14,9 @@ deps =
     coverage
 commands =
     py.test \
+        --cov=tkfplaygroundpy --cov-report= \
         --pyargs tkfplaygroundpy \
-        --cov=tkfplaygroundpy \
-        {posargs:--cov-report=}
+        {posargs}
 commands_pre =
     -rm .coverage
 commands_post =
