--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py
+envlist = py, type, style
 
 # for `requires`:
 minversion = 3.2.0
@@ -37,3 +37,23 @@ source =
     src/tkfplaygroundpy
     .tox/*/lib/python*/site-packages/tkfplaygroundpy
 # https://coverage.readthedocs.io/en/coverage-4.5.1/config.html#paths
+
+[testenv:style]
+deps =
+    black == 19.3b0
+    isort == 4.3.17
+commands =
+    isort --recursive --check-only .
+    black --check --diff .
+commands_pre =
+commands_post =
+
+[testenv:type]
+deps =
+    mypy
+commands =
+    mypy {posargs:-p tkfplaygroundpy}
+commands_pre =
+commands_post =
+setenv =
+    MYPYPATH = {toxinidir}/src
