--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,10 @@ install_requires =
 [options.packages.find]
 where = src
 
+[options.package_data]
+* =
+    py.typed
+
 # [options.entry_points]
 # console_scripts =
 #    PROGRAM_NAME=tkfplaygroundpy.cli:main
