--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,20 @@ source =
     .tox/*/lib/python*/site-packages/tkfplaygroundpy
 # https://coverage.readthedocs.io/en/coverage-4.5.1/config.html#paths
 
+[testenv:packaging]
+commands_pre =
+    rm -rf dist
+    rm -rf src/tkfplaygroundpy.egg-info
+commands =
+    python setup.py sdist
+    python setup.py bdist_wheel
+commands_post =
+    sh -c "tar tf dist/tkfplaygroundpy-*.tar.gz | grep LICENSE"
+    sh -c "unzip -l dist/tkfplaygroundpy-*.whl | grep LICENSE"
+whitelist_externals =
+    rm
+    sh
+
 [testenv:style]
 deps =
     black == 19.3b0
