--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist = py, type, style
 
-# for `requires`:
-minversion = 3.2.0
+# for `commands_post`:
+minversion = 3.4.0
 
 requires =
     setuptools >= 41.0
