Do not rely on external command rm

--- a/tox.ini
+++ b/tox.ini
@@ -18,12 +18,10 @@ commands =
         --pyargs tkfplaygroundpy \
         {posargs}
 commands_pre =
-    -rm .coverage
+    -python -c 'import sys; sys.stderr.close(); import os; os.remove(".coverage")'
 commands_post =
     -coverage combine .coverage
     -coverage report
-whitelist_externals =
-    rm
 
 [pytest]
 addopts =
