--- a/tox.ini
+++ b/tox.ini
@@ -54,9 +54,13 @@ whitelist_externals =
 deps =
     black == 19.3b0
     isort == 4.3.17
+    flake8
+    flake8-bugbear
+    # https://github.com/python/black/blob/master/Pipfile
 commands =
     isort --recursive --check-only .
     black --check --diff .
+    flake8
 commands_pre =
 commands_post =
 
